Use Stream.toList() instead of collect(Collectors.toList())
Simplify code by using the more concise Stream.toList() method and remove unused Collectors import.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>